syntax = "proto3";

package scenarigo.testdata.test;

option go_package = "github.com/zoncoen/scenarigo/testdata/gen/pb/test;test";

enum UserType {
    USER_TYPE_UNSPECIFIED = 0;
    CUSTOMER = 1;
    STAFF = 2;
}

enum State {
    STATE_UNSPECIFIED = 0;
    ACTIVE = 1;
}

service Test {
    rpc Echo(EchoRequest) returns (EchoResponse) {
    };
}

message EchoRequest {
    string message_id = 1;
    string message_body = 2;
}

message EchoResponse {
    string message_id = 1;
    string message_body = 2;
    int64 received_at = 3;
    UserType user_type = 4;
    State state = 5;
    StringValue nullable_string = 11;
    repeated OneofMessage oneof_messages = 12;
}

message OneofMessage {
    oneof value {
        A a = 1;
        B b = 2;
    }
    message A {
      string foo = 1;
    }
    message B {
      string bar = 1;
    }
}

// ref. google/protobuf/wrappers.proto
message StringValue {
    string value = 1;
}
